<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/editTextMSSV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/enter_your_mssv"
            android:inputType="number"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewMSSV"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewName"
            app:layout_constraintTop_toBottomOf="@+id/editTextMSSV"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextCCCD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/enter_your_cccd"
            android:inputType="number"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewCCCD"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewPhone"
            app:layout_constraintTop_toBottomOf="@+id/editTextCCCD"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewEmail"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextDateOfBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="9"
            android:hint="@string/select_your_date_of_birth"
            android:inputType="date"
            android:paddingStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/textViewDateOfBirth"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextPlaceOfOrigin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/enter_your_place_of_origin"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewPlaceOfOrigin"
            app:layout_constraintTop_toBottomOf="@+id/editTextDateOfBirth"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/enter_your_address"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextPlaceOfOrigin"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textViewMajor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

        <TextView
            android:id="@+id/textViewMSSV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mssv"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextMSSV"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewCCCD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cccd"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextCCCD"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhone"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewDateOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextDateOfBirth"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPlaceOfOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_of_origin"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPlaceOfOrigin"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewProgramLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_language"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginStart="30dp"
            android:text="@string/c"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewProgramLanguage" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginStart="30dp"
            android:text="@string/java"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginStart="30dp"
            android:text="@string/python"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

        <CheckBox
            android:id="@+id/checkBoxDieuKhoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Đồng ý điều khoản"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="20dp"
            android:text="OK"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxDieuKhoan" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMajor">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="Kỹ thuật máy tính"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:text="Khoa học máy tính"
                android:textSize="18sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageViewCalendar"
            android:layout_width="44dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPlaceOfOrigin"
            app:layout_constraintStart_toEndOf="@+id/editTextDateOfBirth"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:srcCompat="@android:drawable/ic_menu_my_calendar"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
